<resources>
    <string name="app_name">GithubSearcher</string>
    <string name="label_searcher">Search for user or repository</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_search_history">Search history</string>
    <string name="endpoint">https://api.github.com</string>
    <string name="github_url">https://github.com/</string>

    <string name="cant_search_empty">Can\'t search for empty name</string>
    <string name="wait_for_api">Please wait for API</string>
    <string name="Users">Users:</string>
    <string name="label_user_name">Name</string>
    <string name="label_user_fallowers">Number of fallowers</string>
    <string name="label_user_repos">Number of repositories</string>
    <string name="api_error">Can\'t connect to GitHub</string>
    <string name="label_user_email">Email</string>
    <string name="number_of_results">Results:</string>
    <string name="label_user_login">Login</string>
    <string name="transition_userlist">transition_userlist</string>
</resources>
