<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="eu.rafalolszewski.githubsearcher.ui.details.UserDetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:transitionName="avatar"
                tools:src="@drawable/abc_ab_share_pack_mtrl_alpha"
                />


            <TextView
                android:id="@+id/login"
                android:layout_gravity="center_horizontal"
                android:transitionName="login"
                style="@style/login_value"
                tools:text="UserName123"
                />

            <TextView
                style="@style/label"
                android:text="@string/label_user_name"
                />

            <TextView
                android:id="@+id/name"
                style="@style/value"
                tools:text="Rafał Olszewski"
                />

            <TextView
                style="@style/label"
                android:text="@string/label_user_email"
                />

            <TextView
                android:id="@+id/email"
                style="@style/value"
                tools:text="longusername@longdomain-mail.com.pl"
                />

            <TextView
                android:text="@string/label_user_fallowers"
                style="@style/label" />

            <TextView
                android:id="@+id/followers"
                style="@style/value"
                tools:text="102"
                />

            <TextView
                android:text="@string/label_user_repos"
                style="@style/label" />

            <TextView
                android:id="@+id/repos"
                style="@style/value"
                tools:text="274"
                />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_centerInParent="true"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:visibility="invisible"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_language_white_24dp"
        android:visibility="invisible"
        />


    <TextView
        android:id="@+id/error"
        android:text="@string/api_error"
        android:gravity="center"
        android:textSize="@dimen/error_message_size"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>
